# GUI-Quiz

./: main.py  pyproject.toml
