[tool.poetry]
name = "repl_python3_GUI-Quiz"
version = "0.1.0"
description = ""
authors = ["VrishankPatloll <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
self = "^2020.12.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
